# inkspire2

./: .dockerignore  .env.docker  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Procfile  README.md  docker-compose.yml  repomix-output.xml
backend/: .dockerignore  get_models.py  package-lock.json  pyproject.toml
backend/apps/ai/: __init__.py  urls.py  views.py
backend/apps/appointment/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/appointment/migrations/: 0001_initial.py  0002_appointment_artist_notes_appointment_deposit_amount_and_more.py  0003_alter_appointment_id_alter_artistavailability_id.py  0004_appointment_stripe_payment_intent_id_and_more.py  0005_healingnote.py  0006_healinglog_healingphoto.py  0007_healinglog_artist_feedback_healingmessage.py  0008_appointment_is_refunded.py  0009_alter_appointment_placement.py  0010_appointment_received_amount.py
backend/apps/price/: apps.py  constants.py  urls.py  views.py
backend/apps/shop/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/shop/migrations/: 0001_initial.py  0002_alter_order_id_alter_orderitem_id_alter_product_id.py  0003_category_rename_payment_id_order_tracking_number_and_more.py  0004_alter_product_category_remove_review_product_and_more.py  0005_category_shoprevenue_alter_product_category.py  0006_remove_product_category_legacy.py  0007_order_is_refunded.py
backend/apps/users/: admin.py  email_utils.py  i.html  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
backend/apps/users/management/: __init__.py
backend/apps/users/management/commands/: __init__.py  create_admin_superuser.py  seed_db.py
backend/apps/users/migrations/: 0001_initial.py  0002_alter_workschedule_options_workschedule_break_end_and_more.py  0003_tattoohealingtracker.py
backend/core/: models.py  settings.py  urls.py
backend/media/profile_pics/: gray-background-pattern-gray-white-pattern-background-modern-background_10_DDfRjZ4.avif
backend/templates/admin/users/: reject_reason.html
backend/templates/emails/: activate_account.html  admin_new_artist.html  appointment_confirmed.html  appointment_declined.html  artist_approved.html  artist_pending.html  artist_rejected.html
frontend/: .dockerignore  Explore.jsx  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: Footer.jsx  Navbar.css  Navbar.jsx  OrderHistory.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: About.jsx  Appointment.css  Appointment.jsx  ArtistDashboard.css  ArtistDashboard.jsx  ArtistProfile.css  ArtistProfile.jsx  Artists.css  Artists.jsx  Explore.jsx  ForgotPassword.jsx  Gallery.jsx  Home.jsx  Login.jsx  PainMap.jsx  PriceEstimator.jsx  Shop.jsx  Signup.jsx  TattooAISuite.css  TattooAISuite.jsx  TattooHealingTracker.jsx  TattooLibrary.jsx  (+1 more)
nginx/: default.conf
(+5 files in other folders)
